--- a/vuetemplate/public/index.html
+++ b/vuetemplate/public/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
      <!-- Custom styles -->
-  <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/style.min.css">
   <script src="assets/plugins/chart.min.js"></script>
   <script src="assets/plugins/feather.min.js"></script>
